Phone portrait display on mobile phones, the site-title shrinks to avoid overlapping menu icon.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,7 +21,12 @@
     &:visited {
         color: $grey-color-dark;
     }
+    @include media-query($on-phone) {
+        font-size: 20px;
+    }
 }
+
+
 
 .site-nav {
     float: right;
